--- a/projects/health-app/src/index.html
+++ b/projects/health-app/src/index.html
@@ -10,5 +10,6 @@
 </head>
 <body>
 <app-root></app-root>
+<!--<script src="https://www.gstatic.com/firebasejs/8.8.0/firebase-app.js"></script>-->
 </body>
 </html>
